<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    android:orientation="vertical"
    tools:context=".PutinActivity" >
    <include layout="@layout/header_view" android:id="@+id/headerView"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/x35" 
    android:layout_marginRight="@dimen/x15"
    android:layout_marginTop="@dimen/x20"
    android:layout_marginLeft="@dimen/x10"
    >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x35"
       
        android:layout_toRightOf="@+id/textView1"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:paddingLeft="@dimen/x8"
        android:textSize="@dimen/x12" 
        android:hint="@string/PutingAct_etTitle"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="@dimen/x75"
        android:layout_height="match_parent"
        android:gravity="center_vertical|right"
        android:text="@string/putin_xml_title"
        android:textSize="@dimen/x14"
         />

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/x35" 
     android:layout_marginRight="@dimen/x15"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginLeft="@dimen/x10"
    >


        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
             android:layout_toRightOf="@+id/textView2"
            android:background="@drawable/edittext_bg"
            />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/x75"
        android:layout_height="match_parent"
        android:gravity="center_vertical|right"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/putin_xml_type" 
        android:textSize="@dimen/x14"
        />

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/x35" 
     android:layout_marginRight="@dimen/x15"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginLeft="@dimen/x10"
     >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/x75"
        android:layout_height="match_parent"
        android:gravity="center_vertical|right"
        android:text="@string/putin_xml_number" 
        android:textSize="@dimen/x14"
        />
    <LinearLayout 
       android:id="@+id/ll_sn" 
       android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:orientation="horizontal"
         android:layout_toRightOf="@+id/textView3"
         android:background="@drawable/edittext_bg"
        >
      <EditText
        android:id="@+id/et_sn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@null"
        android:ems="10"
        android:paddingLeft="@dimen/x8"
        android:textSize="@dimen/x12" 
        android:hint="@string/PutingAct_etSn"
        />
      <Button 
          android:id="@+id/btn_search"
          android:layout_width="@dimen/x50"
          android:layout_height="match_parent"
          android:background="@null"
          android:text="@string/PutinActivity_search"
          android:textSize="@dimen/x10"
          />  
    </LinearLayout>
    

</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
     android:layout_marginRight="@dimen/x15"
        android:layout_marginTop="@dimen/x20"
         android:layout_marginLeft="@dimen/x10"
    >

    <EditText
    android:id="@+id/editText2"
    android:layout_width="match_parent"
    android:layout_height="@dimen/x80"
    android:background="@drawable/edittext_bg"
    android:ems="10"
    android:gravity="left"
    android:padding="@dimen/x5"
    android:textSize="@dimen/x12" 
    android:layout_toRightOf="@+id/textView4"
    android:hint="@string/PutingAct_etContent"
    />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/x75"
        android:layout_height="@dimen/x35"
        android:gravity="center_vertical|right"
        android:text="@string/PutingAct_content"
        android:textSize="@dimen/x14"
         />

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
     android:layout_marginRight="@dimen/x15"
        android:layout_marginTop="@dimen/x20"
         android:layout_marginLeft="@dimen/x10"
    >
<GridView 
        android:id="@+id/noScrollgridview"
        android:layout_width="@dimen/x290"
        android:layout_height="@dimen/x75"
        android:horizontalSpacing="@dimen/x3"        
        android:numColumns="3"
        android:scrollbars="none"
         android:layout_toRightOf="@+id/textView5"
        >
    </GridView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/x75"
        android:layout_height="@dimen/x35"
        android:gravity="center_vertical|right"
        android:text="@string/PutingAct_adjunct"
        android:textSize="@dimen/x13"
         />

</RelativeLayout>

  <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/x250"
            android:layout_height="@dimen/x30"
            android:background="@drawable/btn_commit_selector"
            android:textSize="@dimen/x15"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/PutingAct_commit" 
            android:layout_marginTop="@dimen/x20"
            android:layout_gravity="center_horizontal"
            
            />

</LinearLayout>
