<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/blue_background"
    android:orientation="vertical" >
    <include 
        android:id="@+id/headerView"
        layout="@layout/header_view"
        />
  <com.growatt.shinephone.view.AutoFitTextView
      android:id="@+id/tvLED"
      android:layout_width="match_parent"
      android:layout_height="@dimen/x50"
      android:textColor="#ffffff"
      android:textSize="@dimen/x14"
      android:gravity="center_vertical"
      android:layout_marginLeft="@dimen/x10"
      android:text="@string/GifAct_check_LED"
      />
  <LinearLayout 
       android:layout_width="wrap_content"
    android:layout_height="@dimen/x180"
    android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      >
  <LinearLayout 
     android:layout_width="@dimen/x136"
     android:layout_height="match_parent"
     android:orientation="vertical" 
     android:gravity="center_horizontal"
      >
  <!--<com.ant.liao.GifView-->
    <!--android:id="@+id/gif_ok"-->
    <!--android:layout_width="@dimen/x136"-->
    <!--android:layout_height="@dimen/x136"-->
    <!--android:enabled="false" -->
    <!---->
    <!--/>-->
    <ImageView
        android:id="@+id/ivOk"
        android:layout_width="@dimen/x136"
        android:layout_height="@dimen/x136"
        android:src="@drawable/gif_connected_ok"
        />
    <com.growatt.shinephone.view.AutoFitTextView
        android:layout_width="match_parent"
      android:layout_height="@dimen/x40"
      android:textColor="#95e262"
      android:textSize="@dimen/x14"
      android:gravity="center"
      android:text="@string/GifAct_status_success"
      />
  </LinearLayout>
  <LinearLayout 
     android:layout_width="@dimen/x136"
     android:layout_height="match_parent"
     android:orientation="vertical" 
     android:gravity="center_horizontal"
      android:layout_marginLeft="@dimen/x10"
      >
  <!--<com.ant.liao.GifView-->
    <!--android:id="@+id/gif_fail"-->
    <!--android:layout_width="@dimen/x136"-->
    <!--android:layout_height="@dimen/x136"-->
    <!--android:enabled="false" -->
    <!--/>-->
    <ImageView
        android:id="@+id/ivFail"
        android:layout_width="@dimen/x136"
        android:layout_height="@dimen/x136"
        android:src="@drawable/gif_connected_failed"
        />
    <com.growatt.shinephone.view.AutoFitTextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:gravity="center"
        android:text="@string/GifAct_status_fail"
        android:textColor="#ed5d5d"
        android:textSize="@dimen/x14" />
  </LinearLayout>
</LinearLayout>
  
  <com.growatt.shinephone.view.AutoFitTextView
      android:layout_width="match_parent"
      android:layout_height="@dimen/x50"
      android:textColor="#ffffff"
      android:textSize="@dimen/x14"
      android:gravity="center_vertical"
      android:layout_marginLeft="@dimen/x10"
      android:layout_marginRight="@dimen/x10"
      android:text="@string/GifAct_note_success"
      />
  <com.growatt.shinephone.view.AutoFitTextView
      android:layout_width="match_parent"
      android:layout_height="@dimen/x30"
      android:textColor="#ffffff"
      android:textSize="@dimen/x14"
      android:gravity="center_vertical"
      android:layout_marginLeft="@dimen/x10"
      android:layout_marginRight="@dimen/x10"
      android:text="@string/GifAct_note_fail"
      />
  <com.growatt.shinephone.view.AutoFitTextView
      android:layout_width="match_parent"
      android:layout_height="@dimen/x20"
      android:textColor="#ffffff"
      android:textSize="@dimen/x14"
      android:gravity="center_vertical"
      android:layout_marginLeft="@dimen/x25"
      android:layout_marginRight="@dimen/x10"
      android:text="@string/GifAct_note_fail_1"
      />
  <ImageView 
      android:layout_width="match_parent"
      android:layout_height="@dimen/x50"
       android:layout_marginLeft="@dimen/x30"
      android:layout_marginRight="@dimen/x30"
      android:src="@drawable/wifi_status"
      />
  <com.growatt.shinephone.view.AutoFitTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="#ffffff"
      android:textSize="@dimen/x14"
      android:gravity="center_vertical"
      android:layout_marginLeft="@dimen/x25"
      android:layout_marginRight="@dimen/x10"
      android:text="@string/GifAct_note_fail_2"
      />
  <com.growatt.shinephone.view.AutoFitTextView
      android:id="@+id/tvBack" 
      android:layout_width="@dimen/x150"
      android:layout_height="@dimen/x30"
      android:textColor="#ffffff"
      android:textSize="@dimen/x16"
      android:gravity="center"
      android:layout_gravity="center_horizontal"
      android:text="@string/GifAct_back"
      android:background="@drawable/power_text_bg"
      android:layout_marginTop="@dimen/x10"
      />
</LinearLayout>
