<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_background"
    tools:context="com.growatt.shinephone.activity.EnergyDetialActivity">
    <include
        android:id="@+id/headerView"
        layout="@layout/header_view"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x30"
        android:layout_margin="@dimen/x10"
        android:orientation="horizontal">

        <com.growatt.shinephone.view.AutoFitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/m4"
            android:textColor="@color/btn_top_detical"
            android:textSize="@dimen/x12" />

        <com.growatt.shinephone.view.AutoFitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x5"
            android:layout_marginRight="@dimen/x5"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/m591_s"
            android:textColor="@color/btn_top_detical"
            android:textSize="@dimen/x12" />

        <com.growatt.shinephone.view.AutoFitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/m601_s"
            android:textColor="@color/btn_top_detical"
            android:textSize="@dimen/x12" />

        <com.growatt.shinephone.view.AutoFitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x5"
            android:layout_marginRight="@dimen/x5"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/m62"
            android:textColor="@color/btn_top_detical"
            android:textSize="@dimen/x12" />

        <com.growatt.shinephone.view.AutoFitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/m621_s"
            android:textColor="@color/btn_top_detical"
            android:textSize="@dimen/x12" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvData"
        android:background="@drawable/shape_listview_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginBottom="@dimen/x20"
        android:scrollbars="none"
        android:dividerHeight="0dp"
        android:divider="@null"
        />
</LinearLayout>
