<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical"
    tools:context="com.growatt.shinephone.activity.NewPhoneVerActivity">
    <include layout="@layout/header_view" android:id="@+id/headerView"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x30"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/y40"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        >
        <EditText
            android:id="@+id/etAreaCode"
            android:layout_width="@dimen/x50"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/m42"
            android:textColorHint="@color/hint_bg_blue"
            android:drawableBottom="@drawable/bg_edittext_whiteline"
            android:gravity="center"
            android:textColor="@color/hint_bg_blue"
            android:textSize="@dimen/x13"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/hint_bg_blue"
            android:layout_margin="@dimen/x4"
            />
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="@dimen/x156"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/m26"
            android:paddingLeft="@dimen/x10"
            android:paddingRight="@dimen/x10"
            android:textColorHint="@color/hint_bg_blue"
            android:drawableBottom="@drawable/bg_edittext_whiteline"
            android:gravity="center"
            android:textColor="@color/hint_bg_blue"
            android:textSize="@dimen/x13"
            />
        <Button
            android:id="@+id/btnSendCode"
            android:layout_width="@dimen/x65"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_square_selector_green"
            android:padding="@dimen/x2"
            android:text="@string/m23"
            android:textColor="@color/content_bg_blue"
            android:textSize="@dimen/size_note"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/etVCode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x25"
        android:layout_marginLeft="@dimen/x79"
        android:layout_marginRight="@dimen/x85"
        android:layout_marginTop="@dimen/x15"
        android:background="@null"
        android:drawableBottom="@drawable/bg_edittext_whiteline"
        android:gravity="center"
        android:hint="@string/m21"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        android:textColor="@color/hint_bg_blue"
        android:textColorHint="@color/hint_bg_blue"
        android:textSize="@dimen/x13" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x60"
        android:background="@drawable/btn_selector_whitetored"
        android:textColor="@color/oss_selector_textcolor_device"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_cache_ok"
        android:textSize="@dimen/size_content_title" />
</LinearLayout>
