<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reback_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.growatt.shinephone.activity.RebackPwdActivity">
    <include
        android:id="@+id/headerView"
        layout="@layout/header_view"

        />

    <Button
        android:id="@+id/userNameBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_marginTop="@dimen/x40"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginBottom="@dimen/x20"
        android:background="@drawable/btn_selector_whitetored"
        android:textColor="@color/oss_selector_textcolor_device"
        android:text="@string/m34"
        android:textSize="@dimen/x15" />

    <Button
        android:id="@+id/phoneBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_margin="@dimen/x10"
        android:background="@drawable/btn_selector_whitetored"
        android:textColor="@color/oss_selector_textcolor_device"
        android:text="@string/m16"
        android:textSize="@dimen/x15"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="@dimen/x250"
        android:layout_height="wrap_content"
        android:text="@string/m55"
        android:textColor="@color/white1"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        />
</LinearLayout>
